<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/home">

    <!-- Home Fragment (Dashboard) -->
    <fragment
        android:id="@+id/home"
        android:name="com.ldlda.chesscom_stats.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <!-- Actions to detail screens -->
        <action
            android:id="@+id/action_home_to_playerSearch"
            app:destination="@id/playerSearchFragment" />
        <action
            android:id="@+id/action_home_to_clubs"
            app:destination="@id/clubFragment" />
        <action
            android:id="@+id/action_home_to_fidePredict"
            app:destination="@id/fidePredictFragment" />
        <action
            android:id="@+id/action_home_to_puzzle"
            app:destination="@id/puzzleFragment" />
    </fragment>

    <!-- Leaderboards Fragment -->
    <fragment
        android:id="@+id/leaderboards"
        android:name="com.ldlda.chesscom_stats.ui.leaderboards.LeaderboardsFragment"
        android:label="@string/hall_of_fame"
        tools:layout="@layout/fragment_hall_of_fame" />

    <!-- Favorites Fragment -->
    <fragment
        android:id="@+id/favorites"
        android:name="com.ldlda.chesscom_stats.ui.favorites.FavoritesFragment"
        android:label="@string/fav"
        tools:layout="@layout/fragment_favorites" />

    <!-- Lessons Fragment -->
    <fragment
        android:id="@+id/lessons"
        android:name="com.ldlda.chesscom_stats.ui.lessons.LessonsFragment"
        android:label="@string/lesson"
        tools:layout="@layout/fragment_lessons" />

    <!-- DETAIL DESTINATIONS (hide bottom nav when showing these) -->

    <!-- Player Search Fragment -->
    <fragment
        android:id="@+id/playerSearchFragment"
        android:name="com.ldlda.chesscom_stats.ui.playersearch.PlayerSearchFragment"
        android:label="Player Search"
        tools:layout="@layout/fragment_player_search" />

    <!-- Club Finder Fragment -->
    <fragment
        android:id="@+id/clubFragment"
        android:name="com.ldlda.chesscom_stats.ui.clubs.ClubFragment"
        android:label="Club Finder"
        tools:layout="@layout/fragment_club" />

    <!-- FIDE Prediction Fragment -->
    <fragment
        android:id="@+id/fidePredictFragment"
        android:name="com.ldlda.chesscom_stats.ui.ai.FidePredictFragment"
        android:label="FIDE Prediction"
        tools:layout="@layout/fragment_fide_predict" />

    <!-- Puzzle Fragment -->
    <fragment
        android:id="@+id/puzzleFragment"
        android:name="com.ldlda.chesscom_stats.ui.puzzle.PuzzleFragment"
        android:label="Puzzle"
        tools:layout="@layout/fragment_puzzle" />

</navigation>