<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/club_avatar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/outline_home_black_20"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/clubName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="@string/none"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/clubURI"
                app:layout_constraintStart_toEndOf="@id/club_avatar"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/clubMemberCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/clubMember"
                android:textStyle="italic"
                app:layout_constraintStart_toEndOf="@id/club_avatar"
                app:layout_constraintTop_toBottomOf="@id/clubName" />

            <TextView
                android:id="@+id/clubVisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:text="@string/clubPublic"
                android:textStyle="italic"
                app:layout_constraintEnd_toStartOf="@id/clubURI"
                app:layout_constraintStart_toEndOf="@id/clubMemberCount"
                app:layout_constraintTop_toBottomOf="@id/clubName" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clubURI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_spinner"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                android:text=""
                app:icon="@drawable/ic_forward"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>
